# ArchitectureAnalysis

./: OPENCLAW_AGENT_STRUCTURE.md  diskann-architecture.md
OpenViking/: openviking-architecture-4plus1.md
auto-bind/: TEST_REPORT.md
auto-bind/references/: best-practices.md
auto-bind/scripts/: README.md  check_interrupts.py  test_all.py
cpu-bind/: SKILL.md
cpu-bind/scripts/: cpu_bind.py
hashset/: .gitignore  run_tests.sh
hashset-architecture/: README.md
hashset/base/: hash_set.cpp  hash_set.h
hashset/common/: i_hash_set.h  node.h  test_utils.h
hashset/crash/: hash_set.cpp  (+1 more)
pgvector/: README.md  pgvector_4plus1_view.md
pgvector/pgvector-neon/: .gitignore  CMakeLists.txt  Makefile  README.md  log.S
pgvector/pgvector-neon/docs/: 4plus1_view.md  interface_design.md  test_guide.md
pgvector/pgvector-neon/include/: bit_distance.h  half_distance.h  half_types.h  vector_distance.h
pgvector/pgvector-neon/src/: bit_distance_native.c  bit_distance_neon.c  half_distance_native.c  half_distance_neon.c  vector_distance_native.c  vector_distance_neon.c
pgvector/pgvector-neon/tests/: benchmark.cpp  simple_test.cpp  test_all.cpp
protobuf-base64-simd/: Makefile
protobuf-packed-simd/: Makefile
simd-optimizer/: README.md  install-simd-optimizer.sh  simd-optimizer-guide.md
sonic-cpp/: sonic_cpp_4plus1_view.md
torch_npu/: torch_npu_architecture_analysis.md  torch_npu_cann_api_stub_guide.md
uavs3e/: uavs3e_realtime_4plus1_view.md  uavs3e_realtime_architecture_analysis.md
x264/: x264-architecture-analysis.md
x265/: x265_architecture_analysis.md
(+77 files in other folders)
